Fix spacing on active indicator within tabbar

--- a/components/tabBar/index.less
+++ b/components/tabBar/index.less
@@ -19,7 +19,7 @@ footer ul {
 footer ul li {
     float: left;
     width: 33.3%;
-    height: 42px;
+    height: 44px;
 
     text-align: center;
     font-size: 8pt;
